@@ -1,5 +1,6 @@
 Version 2009112401
 + POD & Kwalitee tests.
++ Added Test::NoWarnings, done_testing and BAIL_OUT in tests.
 
 Version 2009072801
 + --shuffle-names option. Room names are no longer shuffled by default.
